kubernetes/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes: #references to volume claims being used
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-claim
      containers:
      - name: db
        image: postgres
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
        ports:
        - containerPort: 5432
        #Mounting inside the container
        volumeMounts:
          - name: postgres-storage
            mountPath: /var/lib/postgresql/data
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
  - port: 5432 #service port
    targetPort: 5432 #pod port
    #Service will be available at [port] and forward request to [targetPort]
