kubernetes/ingress.yaml
#Ingress -> Internal Service -> Pod
#minikube addons enable ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: food-ingress
  labels:
    name: food-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  # - host: 
  - http:
      paths:
      - pathType: Prefix
        path: /?(.*)
        backend:
          service:
            name: client
            port: 
              number: 80
      - pathType: Prefix
        path: /api/?(.*)
        backend:
          service:
            name: api
            port: 
              number: 10001
